updated things in Homepage.html

--- a/homepage.html
+++ b/homepage.html
@@ -50,6 +50,7 @@
     <div> October 17: Week 6 of NFL</div>
     <div> October 18: Chemistry unit test</div>
     <div> October 24: Week 7 of NFL</div>
+    <div> October 27: Solar panels are installed.</div>
     <div> October 31: Week 8 of NFL</div>
     <div> October 31: Halloween</div>
 
