--- a/table.html
+++ b/table.html
@@ -11,10 +11,10 @@
 
     <h1>Statistics</h1>
 
-    <h2>Economy in North America 2006-2019 (GDP).</h2>
+    <h2>Economy in North America 2006-2020 (GDP).</h2>
     <p>Sources: Trading economics, Wikipedia, WorldBank, Theodra, Poplulation data, Worldstatesmen and Statistia</p>
     <p>GDP numbers are in Dollars.</p>
-    <p id='italic'>Updated: June 20, 2021</p>
+    <p id='italic'>Updated: December 24, 2021</p>
     <ul>
         <a href='./homepage.html' target='_blank'>Homepage</a>
         <a href='./PrimeNumbers.html' target='_blank'>Prime Number Calculation</a>
@@ -26,71 +26,88 @@
         <tr>
             <th>Country</th>
             <th>Economy (GDP)</th>
+            <th>Difference</th>
 
             <th>Country</th>
             <th>Economy (GDP)</th>
+            <th>Difference</th>
 
             <th>Country</th>
             <th>Economy (GDP)</th>
+            <th>Difference</th>
         </tr>
 
         <tr>
             <td>USA</td>
-            <td>$ 20.93 trillion (2020)</td>
+            <td>$ 20,940 trillion (2020)</td>
+            <td>No difference from last year</td>
 
             <td>Haiti</td>
             <td>$ 8.50 billion</td>
+            <td></td>
 
             <td>Saint Pierre and Miquelon</td>
             <td>$ 261 million (2015) </td>
+            <td></td>
 
         </tr>
 
         <tr>
             <td>Canada</td>
-            <td>$ 1,736.43 billion</td>
+            <td>$ 1,644.04 billion (2020) </td>
+            <td>Decreased from 1,741.58 billion</td>
 
             <td>Cayman Islands</td>
             <td>$ 5.49 billion</td>
+            <td>Coming soon</td>
 
 
 
             <td>Saint Barthelemy</td>
             <td>$255 million (2007)</td>
+            <td>Coming soon</td>
 
         </tr>
 
         <tr>
             <td>Mexico</td>
-            <td>$ 1,200 billion</td>
+            <td>$1076 billion (2020)</td>
+            <td>Decreased from 1,200 billion</td>
 
             <td>Barbados</td>
             <td>$ 5.21 billion</td>
+            <td></td>
 
             <td>Montserrat</td>
             <td>$ 167 million (2011)</td>
+            <td></td>
 
         </tr>
 
         <tr>
             <td>Puerto Rico (US)</td>
             <td>$ 105 billion</td>
+            <td></td>
 
             <td> Virgin Island</td>
             <td>$ 3.86 billion (2017)</td>
+            <td></td>
 
 
             <td>St Maartin</td>
             <td>$ 17 million</td>
+            <td></td>
 
         </tr>
 
         <tr>
             <td>Cuba</td>
             <td>$ 100 billion</td>
+            <td></td>
 
             <td>Greenland</td>
             <td>$ 3 billion (2018)</td>
+            <td></td>
 
 
         </tr>
@@ -98,9 +115,11 @@
         <tr>
             <td>Dominican Republic</td>
             <td>$ 88.94 billion</td>
+            <td></td>
 
             <td>Saint Lucia</td>
             <td>$ 2.12 billion</td>
+            <td></td>
 
 
         </tr>
@@ -108,9 +127,11 @@
         <tr>
             <td>Guatemala</td>
             <td>$ 85.30 billion</td>
+            <td></td>
 
             <td>Belize</td>
             <td>$ 1.88 billion</td>
+            <td></td>
 
 
         </tr>
@@ -118,71 +139,87 @@
         <tr>
             <td>Panama</td>
             <td>$ 66.80 billion</td>
+            <td></td>
 
             <td>Antigua and Barbuda</td>
             <td>$ 1.73 billion </td>
+            <td></td>
 
         </tr>
 
         <tr>
             <td>Costa Rica</td>
             <td>$ 61.77 billion</td>
+            <td></td>
 
             <td>Saint Martin</td>
             <td>$ 1.39 billion (2008)</td>
+            <td></td>
 
         </tr>
 
         <tr>
             <td>El Salvador</td>
             <td>$ 27 billion</td>
+            <td></td>
 
             <td>Grenada</td>
             <td>$ 1.23 billion</td>
+            <td></td>
 
         </tr>
 
         <tr>
             <td>Honduras</td>
             <td>$ 25.10 billion</td>
+            <td></td>
 
 
             <td>Turks and Caicos Islands</td>
             <td>$ 1.197 billion</td>
+            <td></td>
 
         </tr>
 
         <tr>
             <td>Jamaica</td>
             <td>$ 15.45 billion</td>
+            <td></td>
 
             <td>Saint Kitts and Nevis</td>
             <td>$1.05 billion</td>
+            <td></td>
 
         </tr>
 
         <tr>
             <td>Bahamas</td>
             <td>$ 12.83 billion</td>
+            <td></td>
 
             <td>St Vincent and Grenadines</td>
             <td>$ 0.83 billion</td>
+            <td></td>
         </tr>
 
         <tr>
             <td>Nicaragua</td>
             <td>$ 12.52 billion</td>
+            <td></td>
 
             <td>Dominica</td>
             <td>$ 0.60 billion</td>
+            <td></td>
         </tr>
 
         <tr>
             <td>Martinique</td>
             <td>$ 9.363 billion (2015) </td>
+            <td></td>
 
             <td>Guadeloupe</td>
             <td>$ 11,556 million (2016)</td>
+            <td></td>
 
 
         </tr>
