--- a/homepage.html
+++ b/homepage.html
@@ -19,43 +19,37 @@
         
     </ul>
     <h1 style="margin-top: 60px;">My website</h1>
-    <p style="font-style: italic;"> Updated: October 9, 2021</p>
+    <p style="font-style: italic;"> Updated: December 24, 2021</p>
     <p>This website is the root of all the websites I made but there's more to this website. </p>
-    <p>This website would have a journal, important dates to mark and other websites to visit. </p>
+    <p>This website has a journal, important dates to mark and other websites to visit. </p>
 
     <h2>What happened based on what I know:</h2>
-    <div>October 9 (Saturday)- There was so much that has happened. Since June, we had a fun summer and did many things like
-        computer, watching TV, working on garden, playing board games but we did not go on any trips except to the local high
-        school. We had school and we learned many things in chemistry for science. We did projects for Stem and we're doing
-        paragraphs for ELA. In social studies, we did American revolution stuff and we did robotics for tech. In health, 
-        we did mental health and CPR (chest only). In math, we learned functions and algebra. Since the last time we did this,
-        India did a tour with Sri Lanka and drawn since in the ODI, India won but since they put the best players for England, 
-        they lost in the T20. For the England tour, they had won and now are doing IPL. I think that is going to finish in a couple
-        of days or in a week and the world cup is going to start.</div>
-        
-        <div>The garden has grown beautifully, with Amaranth flowering and 
-        zinnias had grown so huge. The big purple zinnia has grown and gave beautiful flowers. The marigolds have grown great but 
-        some are dying. Sweet potato had its leaves eaten but had made a good comeback. Cucumbers gave many fruit but died somewhere
-        in August. This year, we had less cherry tomatoes but a variety of tomato plants with many tomatoes being used on our weekly feast.
-        They had helped us still eat tomato when there were none from the fridge. The onion is growing great in the forest and now we are using
-        variety of vegetables and planting them by cuttings. The abelia cuttings have succeded with one of them giving flowers. Violas died in July
-        probably because of the rain. The lavender died, daisy and this ornamental shrub that is still growing well. We decided to do stone sidings
-        and put some stones. We are still planing for more stones. Since June, the solar panel order is doing great with approval and the building date
-        to be October 27. We had got some myrtle trees from Home depot and planted it. We also had moved the lawn since the grass was growing tall. </div>
- 
-    <h2>October 2021 dates:</h2>
-    <div> October 10: Week 5 of NFL</div>
-    <div> October 11-15: County wide test</div>
-    <div> October 17: T20 Cricket world cup begins</div>
-    <div> October 17: Week 6 of NFL</div>
-    <div> October 18: Chemistry unit test</div>
-    <div> October 24: Week 7 of NFL</div>
-    <div> October 27: Solar panels are installed.</div>
-    <div> October 31: Week 8 of NFL</div>
-    <div> October 31: Halloween</div>
+    <div> 
+        December 24 (Part 1)- A lot has happened since October since that now we're in winter break which is going to end on January 3, 2022.
+          Unfortunately a lot of plants died in the garden but they would've died in the winter. The amaranth plant was growing really big.
+          Also we got no sweet potatoes since only roots have grown and not any edible parts of an potato.
+          Since October, the Cricket t20 world cup happened and India lost against Pakistan by 10 wickets! It's the first time they lost against
+          Pakistan in an world cup. They also lost against New Zealand which made them eliminated from world cup. Another shocking thing was that
+          West Indies scored 55 all out against England in their first match. West Indies has won 2 t20 world cups making them have the greatest amount
+          of world cups won. The semifinal matches were England v New Zealand and Pakistan v Australia. New Zealand and Australia won the semis but 
+          Australia won against New Zealand by 8 wickets making Australia win their first T20 world cup. My 14th birthday has passed.
+    </div>
+    <div>
+        December 24 (Part 2) - We started watching Avatar: The last Airbender on Netflix and Prime. Also, I got injured in my knee again on the end of 1st 
+        quarter and it took a few weeks to heal. Now we're in second quarter on P.E and we did our unit on flag football. Our team played some games and we
+        did pretty good with a record of 5 wins and 3 losses. We ran the mile and I got a score of 11:18 which is good. Other than that, not much has happened
+        in my other classes other than learning westward expansion in Social Studies and Geology in Science. For the first quarter, I got straight A's in all
+        my subjects and so far in second quarter it's still straight A's. That's pretty much it.
+    </div>
+    <h2>December 2021 dates:</h2>
+    <div> December 25-December 31: Winter break</div>
+    <div> December 25: Christmas</div>
+    <div> December 26: Week 17 of NFL</div>
+    <div> December 26-30: India cricket match against South Africa</div>
+    <div> December 31: End of 2021</div>
 
-    <h2>What's new in this website and what I would do:</h2>
-    <div>Added things in calander.</div>
+    <h2>What's new in my websites and what I would do:</h2>
+    <div>I created an Canvas and learning website. I updated the stat's website by updating GDP info </div>
 
 </body>
 
