changes in stats website

--- a/table.html
+++ b/table.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
     <link rel='stylesheet' href='./table.css'>
     <title>The stats website!</title>
 </head>
@@ -44,7 +43,7 @@
 
             <td>Cayman Islands</td>
             <td>$ 6 billion (2019)</td>
-            <td>Coming soon</td>
+            <td></td>
 
             <td>Saint Pierre and Miquelon</td>
             <td>$ 261 million (2015) </td>
@@ -58,8 +57,8 @@
             <td>Decreased from $1,741.58 B </td>
 
             <td>Barbados</td>
-            <td>$ 5.21 billion</td>
-            <td></td>
+            <td>$ 4.37 billion</td>
+            <td>Decreased from 5.21 B</td>
 
             <td>Saint Barthelemy</td>
             <td>$255 million (2007)</td>
@@ -72,8 +71,8 @@
             <td>Decreased from <br>$1,200 B</td>
 
             <td> Virgin Island</td>
-            <td>$ 3.86 billion (2017)</td>
-            <td></td>
+            <td>$ 4 billion (2018)</td>
+            <td>Increased from 3.86 B</td>
 
             <td>Montserrat</td>
             <td>$ 167 million (2011)</td>
@@ -99,19 +98,19 @@
             <td>$ 103 billion (2020)</td>
             <td>Increased from 100 B</td>
 
-            <td>Saint Lucia</td>
-            <td>$ 2.12 billion</td>
-            <td></td>
+            <td>Belize</td>
+            <td>$ 1.76 billion</td>
+            <td>Decreased from 1.88 B</td>
         </tr>
 
         <tr>
             <td>Dominican Republic</td>
             <td>$ 78.84 billion</td>
             <td>Decreased from 88.94 B</td>
-
-            <td>Belize</td>
-            <td>$ 1.88 billion</td>
-            <td></td>
+            
+            <td>Saint Lucia</td>
+            <td>$ 1.7 billion</td>
+            <td>Decreased from 2.12 billion</td>
         </tr>
 
         <tr>
@@ -120,8 +119,8 @@
             <td>Increased from 77.02 B</td>
 
             <td>Antigua and Barbuda</td>
-            <td>$ 1.73 billion </td>
-            <td></td>
+            <td>$ 1.41 billion </td>
+            <td>Decreased from 1.73 B</td>
         </tr>
 
         <tr>
@@ -140,8 +139,8 @@
             <td>Decreased from 66.80 B</td>
 
             <td>Grenada</td>
-            <td>$ 1.23 billion</td>
-            <td></td>
+            <td>$ 1.1 billion</td>
+            <td>Decreased from 1.23 B</td>
         </tr>
 
         <tr>
@@ -150,8 +149,8 @@
             <td>Decreased from 27 B</td>
 
             <td>Turks and Caicos Islands</td>
-            <td>$ 1.197 billion</td>
-            <td></td>
+            <td>$ 924.6 million</td>
+            <td>Decreased from $1.197 B</td>
         </tr>
 
         <tr>
@@ -167,8 +166,8 @@
 
         <tr>
             <td>Jamaica</td>
-            <td>$ 15.45 billion</td>
-            <td></td>
+            <td>$ 13 billion</td>
+            <td>Decreased from 15.45 B</td>
 
             <td>St Vincent and Grenadines</td>
             <td>$ 0.83 billion</td>
@@ -176,10 +175,8 @@
         </tr>
 
         <tr>
-
-
             <td>Haiti</td>
-            <td>$ 13 billion (2020)</td>
+            <td>$ 13 billion </td>
             <td>Decreased from $14 B</td>
 
             <td>Dominica</td>
@@ -191,8 +188,8 @@
 
 
             <td>Bahamas</td>
-            <td>$ 12.83 billion</td>
-            <td></td>
+            <td>$ 11.25 billion</td>
+            <td>Decreased from 12.83 B</td>
 
             <td>Nicaragua</td>
             <td>$ 12.52 billion</td>
@@ -216,9 +213,25 @@
     <span>
         <li class='bold'>North America</li>
         <li>USA</li>
+        <li>Capital- Washington DC</li>
         <li>Canada</li>
+        <li>Capital- Ottawa</li>
         <li>Mexico</li>
-        <li class='bottomthings'>Greenland</li>
+        <li>Capital- Mexico City</li>
+        <li>Greenland</li>
+        <li>Territory of Denmark</li>
+        <li>Solution to solve list problem.</li>
+        <li>Solution to solve list problem.</li>
+        <li>Solution to solve list problem.</li>
+        <li>Solution to solve list problem.</li>
+        <li>Solution to solve list problem.</li>
+        <li>Solution to solve list problem.</li>
+        <li>Solution to solve list problem.</li>
+        <li>Solution to solve list problem.</li>
+        <li>Solution to solve list problem.</li>
+        <li>Solution to solve list problem.</li>
+        <li>Solution to solve list problem.</li>
+        <li class='bottomthings'>Spacefiller</li>
     </span>
     <span>
         <li class='bold'>Central Amercia</li>
@@ -228,7 +241,20 @@
         <li>El Salvador</li>
         <li>Honduras</li>
         <li>Nicaragua</li>
-        <li class='bottomthings'>Belize</li>
+        <li>Belize</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li class='bottomthings'>Spacefiller</li>
     </span>
     <span>
         <li class='bold'>Caribbean </li>
@@ -257,7 +283,24 @@
         <li class='bold'>Atlantic Islands</li>
         <li>Antigua and Barbuda</li>
         <li>Turks and Caicos Islands</li>
-        <li class='bottomthings'>Saint Pierre and Miquelon</li>
+        <li>Saint Pierre and Miquelon</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li>Spacefiller</li>
+        <li class='bottomthings'>Spacefiller</li>
     </span>
 </body>
 
