made final changes to stat's website

--- a/table.html
+++ b/table.html
@@ -7,13 +7,15 @@
 </head>
 
 <body>
+    <h1>New year's day! It's January 1, 2022! Check the What's new section for updates from the renovation we had!</h1>
 
     <h1>Statistics</h1>
 
     <h2>Economy in North America 2006-2020 (GDP).</h2>
-    <p>Sources: Trading economics, Wikipedia, WorldBank, Theodra, Poplulation data, Worldstatesmen and Statistia</p>
+    <p>Sources: Trading economics, Wikipedia, WorldBank, Theodra, Poplulation data, Worldstatesmen, Statistia and UNCTAD
+    </p>
     <p>GDP numbers are in Dollars.</p>
-    <p id='italic'>Updated: December 26, 2021</p>
+    <p id='italic'>Updated: January 1, 2022</p>
     <ul>
         <a href='./homepage.html' target='_blank'>Homepage</a>
         <a href='./Javascript.html' target='_blank'>Learn Javascript</a>
@@ -38,79 +40,86 @@
 
         <tr>
             <td>USA</td>
-            <td>$ 20,940 trillion (2020)</td>
+            <td>$ 20,940 trillion</td>
             <td>Same as last year</td>
+
+            <td>Martinique</td>
+            <td>$ 9.363 billion (2015) </td>
+            <td></td>
+
+            <td>Guadeloupe</td>
+            <td>$ 11.56 million (2016) (Wikipedia)</td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td>Canada</td>
+            <td>$ 1,644 billion</td>
+            <td>Decreased from $1,741.58 B </td>
+
+            <td>Bermuda</td>
+            <td>$ 7.48 billion (2019)</td>
+            <td></td>
+
+            <td>Dominica</td>
+            <td>$ 469.9 million</td>
+            <td>Decreased from 574.6 M</td>
+        </tr>
+
+        <tr>
+            <td>Mexico</td>
+            <td>$1,076 billion</td>
+            <td>Decreased from <br>$1,200 B</td>
 
             <td>Cayman Islands</td>
             <td>$ 6 billion (2019)</td>
             <td></td>
 
-            <td>Saint Pierre and Miquelon</td>
-            <td>$ 261 million (2015) </td>
-            <td></td>
-
+            <td>Anguilla</td>
+            <td>$ 307 million (UNCTAD)</td>
+            <td>Decreased from $331 M</td>
         </tr>
 
         <tr>
-            <td>Canada</td>
-            <td>$ 1,644 billion (2020) </td>
-            <td>Decreased from $1,741.58 B </td>
+            <td>Puerto Rico (US)</td>
+            <td>$ 103 billion  </td>
+            <td>Decreased from $105 B</td>
 
             <td>Barbados</td>
             <td>$ 4.37 billion</td>
             <td>Decreased from 5.21 B</td>
 
-            <td>Saint Barthelemy</td>
-            <td>$255 million (2007)</td>
-            <td>Coming soon</td>
-        </tr>
-
-        <tr>
-            <td>Mexico</td>
-            <td>$1,076 billion (2020)</td>
-            <td>Decreased from <br>$1,200 B</td>
-
-            <td> Virgin Island</td>
-            <td>$ 4 billion (2018)</td>
-            <td>Increased from 3.86 B</td>
-
-            <td>Montserrat</td>
-            <td>$ 167 million (2011)</td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>Puerto Rico (US) </td>
-            <td>$ 103 billion (2020)</td>
-            <td>Decreased from $105 B</td>
-
-            <td>Greenland</td>
-            <td>$ 3 billion (2018)</td>
-            <td></td>
-
-            <td>St Maartin</td>
-            <td>$ 17 million</td>
+            <td>Saint Pierre and Miquelon</td>
+            <td>$ 261 million (2015) (Wikipedia) </td>
             <td></td>
         </tr>
 
         <tr>
             <td>Cuba </td>
-            <td>$ 103 billion (2020)</td>
+            <td>$ 103 billion</td>
             <td>Increased from 100 B</td>
 
-            <td>Belize</td>
-            <td>$ 1.76 billion</td>
-            <td>Decreased from 1.88 B</td>
+            <td> Virgin Island</td>
+            <td>$ 4 billion (2018)</td>
+            <td>Increased from 3.86 B</td>
+
+            <td>Saint Barthelemy</td>
+            <td>$255 million (2007) (Worldstatesmen)</td>
+            <td></td>
         </tr>
 
         <tr>
             <td>Dominican Republic</td>
             <td>$ 78.84 billion</td>
             <td>Decreased from 88.94 B</td>
-            
-            <td>Saint Lucia</td>
-            <td>$ 1.7 billion</td>
-            <td>Decreased from 2.12 billion</td>
+
+            <td>Greenland</td>
+            <td>$ 3 billion (2018)</td>
+            <td></td>
+
+            <td>Montserrat</td>
+            <td>$ 60 million (UNCTAD)</td>
+            <td>Decrease from $61 million</td>
         </tr>
 
         <tr>
@@ -118,9 +127,9 @@
             <td>$ 78.6 billion</td>
             <td>Increased from 77.02 B</td>
 
-            <td>Antigua and Barbuda</td>
-            <td>$ 1.41 billion </td>
-            <td>Decreased from 1.73 B</td>
+            <td>Belize</td>
+            <td>$ 1.76 billion</td>
+            <td>Decreased from 1.88 B</td>
         </tr>
 
         <tr>
@@ -128,9 +137,9 @@
             <td>$ 61.52 billion</td>
             <td>Decreased from 61.77 B</td>
 
-            <td>Saint Martin</td>
-            <td>$ 1.39 billion (2008)</td>
-            <td></td>
+            <td>Saint Lucia</td>
+            <td>$ 1.7 billion</td>
+            <td>Decreased from 2.12 billion</td>
         </tr>
 
         <tr>
@@ -138,9 +147,9 @@
             <td>$ 52.94 billion</td>
             <td>Decreased from 66.80 B</td>
 
-            <td>Grenada</td>
-            <td>$ 1.1 billion</td>
-            <td>Decreased from 1.23 B</td>
+            <td>Antigua and Barbuda</td>
+            <td>$ 1.41 billion </td>
+            <td>Decreased from 1.73 B</td>
         </tr>
 
         <tr>
@@ -148,9 +157,9 @@
             <td>$ 24.64 billion</td>
             <td>Decreased from 27 B</td>
 
-            <td>Turks and Caicos Islands</td>
-            <td>$ 924.6 million</td>
-            <td>Decreased from $1.197 B</td>
+            <td>Saint Martin</td>
+            <td>$ 1.39 billion (2008)</td>
+            <td></td>
         </tr>
 
         <tr>
@@ -158,10 +167,9 @@
             <td>$ 24 Billion</td>
             <td>Decreased from 25.10B</td>
 
-            <td>Saint Kitts and Nevis</td>
-            <td>$1.05 billion</td>
-            <td></td>
-
+            <td>St Maartin</td>
+            <td>$ 1.185 billion</td>
+            <td>Increased from $17 M. <small>(Error in finding GDP)</small></td>
         </tr>
 
         <tr>
@@ -169,9 +177,9 @@
             <td>$ 13 billion</td>
             <td>Decreased from 15.45 B</td>
 
-            <td>St Vincent and Grenadines</td>
-            <td>$ 0.83 billion</td>
-            <td></td>
+            <td>Grenada</td>
+            <td>$ 1.1 billion</td>
+            <td>Decreased from 1.23 B</td>
         </tr>
 
         <tr>
@@ -179,34 +187,32 @@
             <td>$ 13 billion </td>
             <td>Decreased from $14 B</td>
 
-            <td>Dominica</td>
-            <td>$ 0.60 billion</td>
-            <td></td>
+            <td>Saint Kitts and Nevis</td>
+            <td>$927 million</td>
+            <td>Decreased from $1.05 Billion</td>
         </tr>
 
         <tr>
 
+
+            <td>Nicaragua</td>
+            <td>$ 12.62 billion</td>
+            <td>Increased from $12.52 B</td>
+
+            <td>Turks and Caicos Islands</td>
+            <td>$ 924.6 million</td>
+            <td>Decreased from $1.197 B</td>
+        </tr>
+
+        <tr>
 
             <td>Bahamas</td>
             <td>$ 11.25 billion</td>
             <td>Decreased from 12.83 B</td>
 
-            <td>Nicaragua</td>
-            <td>$ 12.52 billion</td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>Martinique</td>
-            <td>$ 9.363 billion (2015) </td>
-            <td></td>
-
-            <td>Guadeloupe</td>
-            <td>$ 11,556 million (2016)</td>
-            <td></td>
-
-
-
+            <td>St Vincent and Grenadines</td>
+            <td>$ 0.81 billion</td>
+            <td>Decreased from 0.82</td>
         </tr>
 
     </table>
@@ -282,6 +288,8 @@
     <span>
         <li class='bold'>Atlantic Islands</li>
         <li>Antigua and Barbuda</li>
+        <li>Anguilla</li>
+        <li>Bermuda</li>
         <li>Turks and Caicos Islands</li>
         <li>Saint Pierre and Miquelon</li>
         <li>Spacefiller</li>
@@ -298,10 +306,19 @@
         <li>Spacefiller</li>
         <li>Spacefiller</li>
         <li>Spacefiller</li>
-        <li>Spacefiller</li>
-        <li>Spacefiller</li>
         <li class='bottomthings'>Spacefiller</li>
     </span>
+    <h1>What's new:</h1>
+    <h2>Style changes: Changed box and background color. Solved bug when the tops of the lists aren't equal. I solved it
+        by adding more things
+        to the list. Working on making useful things to the list Updated the GDP updated Virgin Island from 2017 to 2018
+        and Montserrat from 2011 to 2020.
+        Added Anguilla and Bermuda Reorganized gdp tables to show greatest to least. Also I added an increase or decrease amount
+        from last year. This is it for our major renovations.
+    </h2>
+    <h1>Why I did an renovation:</h1>
+    <h2>I did one because there were too many things that need to be fixed and updated.</h2>
+    </p>
 </body>
 
 </html>
