additonal final changes

--- a/table.html
+++ b/table.html
@@ -12,7 +12,7 @@
     <h1>Statistics</h1>
 
     <h2>Economy in North America 2006-2020 (GDP).</h2>
-    <p>Sources: Trading economics, Wikipedia, WorldBank, Theodra, Poplulation data, Worldstatesmen, Statistia and UNCTAD
+    <p>Sources:WorldBank, Wikipedia, Theodra, Poplulation data, Worldstatesmen, Statistia and UNCTAD.
     </p>
     <p>GDP numbers are in Dollars.</p>
     <p id='italic'>Updated: January 1, 2022</p>
