--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,6 @@
     <link href="./homepage.png" rel='icon'>
     <link href='./homepage.css' rel='stylesheet'>
     <title>Home</title>
-<!-- Hello this is test -->
 </head>
 
 <body>
@@ -16,29 +15,41 @@
         <a href="./PrimeNumbers.html" target="_blank">Learn Factors</a>
         <a href="./IfElse.html" target="_blank">Boy or Girl Quiz</a>
         <a href="./overflow.html" target="_blank">Demo of overflow</a>
-        
+
     </ul>
     <h1 style="margin-top: 60px;">My website</h1>
-    <p style="font-style: italic;"> Updated: December 24, 2021</p>
+    <p style="font-style: italic;"> Updated: January 2, 2022</p>
     <p>This website is the root of all the websites I made but there's more to this website. </p>
-    <p>This website has a journal, important dates to mark and other websites to visit. </p>
+    <p>This website has a journal, important dates to mark, other websites to visit and what's new in this website and
+        others. </p>
 
     <h2>What happened based on what I know:</h2>
-    <div> 
-        December 24 (Part 1)- A lot has happened since October since that now we're in winter break which is going to end on January 3, 2022.
-          Unfortunately a lot of plants died in the garden but they would've died in the winter. The amaranth plant was growing really big.
-          Also we got no sweet potatoes since only roots have grown and not any edible parts of an potato.
-          Since October, the Cricket t20 world cup happened and India lost against Pakistan by 10 wickets! It's the first time they lost against
-          Pakistan in an world cup. They also lost against New Zealand which made them eliminated from world cup. Another shocking thing was that
-          West Indies scored 55 all out against England in their first match. West Indies has won 2 t20 world cups making them have the greatest amount
-          of world cups won. The semifinal matches were England v New Zealand and Pakistan v Australia. New Zealand and Australia won the semis but 
-          Australia won against New Zealand by 8 wickets making Australia win their first T20 world cup. My 14th birthday has passed.
+    <div>
+        December 24 (Part 1)- A lot has happened since October since that now we're in winter break which is going to
+        end on January 3, 2022.
+        Unfortunately a lot of plants died in the garden but they would've died in the winter. The amaranth plant was
+        growing really big.
+        Also we got no sweet potatoes since only roots have grown and not any edible parts of an potato.
+        Since October, the Cricket t20 world cup happened and India lost against Pakistan by 10 wickets! It's the first
+        time they lost against
+        Pakistan in an world cup. They also lost against New Zealand which made them eliminated from world cup. Another
+        shocking thing was that
+        West Indies scored 55 all out against England in their first match. West Indies has won 2 t20 world cups making
+        them have the greatest amount
+        of world cups won. The semifinal matches were England v New Zealand and Pakistan v Australia. New Zealand and
+        Australia won the semis but
+        Australia won against New Zealand by 8 wickets making Australia win their first T20 world cup. My 14th birthday
+        has passed.
     </div>
     <div>
-        December 24 (Part 2) - We started watching Avatar: The last Airbender on Netflix and Prime. Also, I got injured in my knee again on the end of 1st 
-        quarter and it took a few weeks to heal. Now we're in second quarter on P.E and we did our unit on flag football. Our team played some games and we
-        did pretty good with a record of 5 wins and 3 losses. We ran the mile and I got a score of 11:18 which is good. Other than that, not much has happened
-        in my other classes other than learning westward expansion in Social Studies and Geology in Science. For the first quarter, I got straight A's in all
+        December 24 (Part 2) - We started watching Avatar: The last Airbender on Netflix and Prime. Also, I got injured
+        in my knee again on the end of 1st
+        quarter and it took a few weeks to heal. Now we're in second quarter on P.E and we did our unit on flag
+        football. Our team played some games and we
+        did pretty good with a record of 5 wins and 3 losses. We ran the mile and I got a score of 11:18 which is good.
+        Other than that, not much has happened
+        in my other classes other than learning westward expansion in Social Studies and Geology in Science. For the
+        first quarter, I got straight A's in all
         my subjects and so far in second quarter it's still straight A's. That's pretty much it.
     </div>
     <h2>December 2021 dates:</h2>
