--- a/javascriptDemo.html
+++ b/javascriptDemo.html
@@ -7,9 +7,9 @@
 
 <body>
     <p>This is a demo showing what is the difference between .innerHTML, .innerText and .textContent.</p>
-    <p id='ChangeText'>This has some    good amount of spacing and has an <label>label element.</label>
+    <p id='ChangeText'>This has some    good amount of spacing and has an <label>label element.</p></label>
         <input type='button' value='innerText' id='createInnerText'>
-    <p id='ChangeCont'>This has some    good amount of spacing and has an <label>label element.</label>
+    <p id='ChangeCont'>This has some    good amount of spacing and has an <label>label element.</p></label>
         <input type='button' value='textContent' id='createTextCont'>
     <p id='ChangeHTML'>This has some    good amount of spacing and has an <label>label element.</p></label>
         <input type='button' value='innerHTML' id='createInnerHTML'>
