made changes in 4 files

--- a/Javascript.html
+++ b/Javascript.html
@@ -9,7 +9,7 @@
     about Javascript.</p>
     <h3 class="TopHeaders">About Javascript</h3>
     <p class="TopHeaders">Javascript is a scripting language that is easy to use that can create websites and is the only coding language
-      web browsers understand.</p>
+      web browsers understand. It also makes websites dynamic and more user-interactive.</p>
     <style>
       .Button {
         background-color: #008000;
