--- a/math.html
+++ b/math.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Learning Mathmatical javascripts</title>
+    <title>Learning javascript math</title>
 </head>
 <body>
     
