--- a/homepage.html
+++ b/homepage.html
@@ -25,42 +25,24 @@
 
     <h2>What happened based on what I know:</h2>
     <div>
-        December 24 (Part 1)- A lot has happened since October since that now we're in winter break which is going to
-        end on January 3, 2022.
-        Unfortunately a lot of plants died in the garden but they would've died in the winter. The amaranth plant was
-        growing really big.
-        Also we got no sweet potatoes since only roots have grown and not any edible parts of an potato.
-        Since October, the Cricket t20 world cup happened and India lost against Pakistan by 10 wickets! It's the first
-        time they lost against
-        Pakistan in an world cup. They also lost against New Zealand which made them eliminated from world cup. Another
-        shocking thing was that
-        West Indies scored 55 all out against England in their first match. West Indies has won 2 t20 world cups making
-        them have the greatest amount
-        of world cups won. The semifinal matches were England v New Zealand and Pakistan v Australia. New Zealand and
-        Australia won the semis but
-        Australia won against New Zealand by 8 wickets making Australia win their first T20 world cup. My 14th birthday
-        has passed.
+        January 9th: Not much has happened from the 3rd except that we finished Avatar on the same day but later in night. School resumed and we did benchmark
+        testing and I got a 80 in math. There were some hard questions so it would be a bit higher. Science benchmark is going to come soon. Other than that
+        not much has happened in gardening or school. India won one test match and South Africa another.  
     </div>
     <div>
-        December 24 (Part 2) - We started watching Avatar: The last Airbender on Netflix and Prime. Also, I got injured
-        in my knee again on the end of 1st
-        quarter and it took a few weeks to heal. Now we're in second quarter on P.E and we did our unit on flag
-        football. Our team played some games and we
-        did pretty good with a record of 5 wins and 3 losses. We ran the mile and I got a score of 11:18 which is good.
-        Other than that, not much has happened
-        in my other classes other than learning westward expansion in Social Studies and Geology in Science. For the
-        first quarter, I got straight A's in all
-        my subjects and so far in second quarter it's still straight A's. That's pretty much it.
+        
     </div>
-    <h2>December 2021 dates:</h2>
-    <div> December 25-December 31: Winter break</div>
-    <div> December 25: Christmas</div>
-    <div> December 26: Week 17 of NFL</div>
-    <div> December 26-30: India cricket match against South Africa</div>
-    <div> December 31: End of 2021</div>
-
+    <h2>January 2022 dates:</h2>
+    <div> January 14th: End of 2nd quarter</div>
+    <div> Evening of January 14th: Start of 4 day weekend</div>
+    <div> January 15-17: Wild card weekend in NFL.</div>
+    <div> January 14th-18: Long weekend</div>
+    <div> January 17th: MLK holdiay</div>
+    <div> January 18th: End of long weekend</div>
+    <div> January 19th: Start of 3rd quarter/2nd semester</div>
+    
     <h2>What's new in my websites and what I would do:</h2>
-    <div>I created an Canvas and learning website. I updated the stat's website by updating GDP info </div>
+    <div>I created an Canvas and learning website. I updated the stat's website by updating GDP info, updating styles, added gpd's and fixed the list bug. </div>
 
 </body>
 
