updated homepage and added math in math.html

--- a/homepage.html
+++ b/homepage.html
@@ -18,10 +18,10 @@
 
     </ul>
     <h1 style="margin-top: 60px;">My website</h1>
-    <p style="font-style: italic;"> Updated: January 2, 2022</p>
+    <p style="font-style: italic;"> Updated: January 10, 2022</p>
     <p>This website is the root of all the websites I made but there's more to this website. </p>
     <p>This website has a journal, important dates to mark, other websites to visit and what's new in this website and
-        others. </p>
+        others.</p>
 
     <h2>What happened based on what I know:</h2>
     <div>
@@ -33,6 +33,7 @@
         
     </div>
     <h2>January 2022 dates:</h2>
+    <div> January 11: Science benchmark</div>
     <div> January 14th: End of 2nd quarter</div>
     <div> Evening of January 14th: Start of 4 day weekend</div>
     <div> January 15-17: Wild card weekend in NFL.</div>
@@ -42,7 +43,7 @@
     <div> January 19th: Start of 3rd quarter/2nd semester</div>
     
     <h2>What's new in my websites and what I would do:</h2>
-    <div>I created an Canvas and learning website. I updated the stat's website by updating GDP info, updating styles, added gpd's and fixed the list bug. </div>
+    <div>Updated journal and calander.</div>
 
 </body>
 
